tests/bugs/invalid-field-access/source.french.swa
dialecte:français;

demarrer() entier {
  variable i: entier = 10;
  afficher("%d", i.field);
  retourner 0;
}
